--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Django==1.10.1
+Pillow==3.4.2
 argparse==1.2.1
 diff-match-patch==20121119
 django-import-export==0.5.1
+django-pyodbc==1.0.1
 pdfkit==0.5.0
+psycopg2==2.6.2
+pyodbc==3.0.10
 tablib==0.11.2
 wsgiref==0.1.2
